/*
Copyright 2025 The Dapr Authors
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
    http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

package dapr.proto.runtime.v1;

import "google/protobuf/any.proto";
import "dapr/proto/common/v1/common.proto";

option csharp_namespace = "Dapr.Client.Autogen.Grpc.v1";
option java_outer_classname = "DaprProtos";
option java_package = "io.dapr.v1";
option go_package = "github.com/dapr/dapr/pkg/proto/runtime/v1;runtime";


// Job is the definition of a job. At least one of schedule or due_time must be
// provided but can also be provided together.
message Job {
  // The unique name for the job.
  string name = 1 [json_name = "name"];

  // schedule is an optional schedule at which the job is to be run.
  // Accepts both systemd timer style cron expressions, as well as human
  // readable '@' prefixed period strings as defined below.
  //
  // Systemd timer style cron accepts 6 fields:
  // seconds | minutes | hours | day of month | month        | day of week
  // 0-59    | 0-59    | 0-23  | 1-31         | 1-12/jan-dec | 0-6/sun-sat
  //
  // "0 30 * * * *" - every hour on the half hour
  // "0 15 3 * * *" - every day at 03:15
  //
  // Period string expressions:
	// Entry                  | Description                                  | Equivalent To
	// -----                  | -----------                                  | -------------
  // @every `<duration>`    | Run every `<duration>` (e.g. '@every 1h30m') | N/A
	// @yearly (or @annually) | Run once a year, midnight, Jan. 1st          | 0 0 0 1 1 *
	// @monthly               | Run once a month, midnight, first of month   | 0 0 0 1 * *
	// @weekly                | Run once a week, midnight on Sunday          | 0 0 0 * * 0
	// @daily (or @midnight)  | Run once a day, midnight                     | 0 0 0 * * *
	// @hourly                | Run once an hour, beginning of hour          | 0 0 * * * *
  optional string schedule = 2 [json_name = "schedule"];

  // repeats is the optional number of times in which the job should be
  // triggered. If not set, the job will run indefinitely or until expiration.
  optional uint32 repeats = 3 [json_name = "repeats"];

  // due_time is the optional time at which the job should be active, or the
  // "one shot" time if other scheduling type fields are not provided. Accepts
  // a "point in time" string in the format of RFC3339, Go duration string
  // (calculated from job creation time), or non-repeating ISO8601.
  optional string due_time = 4 [json_name = "dueTime"];

  // ttl is the optional time to live or expiration of the job. Accepts a
  // "point in time" string in the format of RFC3339, Go duration string
  // (calculated from job creation time), or non-repeating ISO8601.
  optional string ttl = 5 [json_name = "ttl"];

  // payload is the serialized job payload that will be sent to the recipient
  // when the job is triggered.
  google.protobuf.Any data = 6 [json_name = "data"];

  // failure_policy is the optional policy for handling job failures.
  optional common.v1.JobFailurePolicy failure_policy = 7 [json_name = "failurePolicy"];
}

// ScheduleJobRequest is the message to create/schedule the job.
message ScheduleJobRequest {
  // The job details.
  Job job = 1;
  // If true, allows this job to overwrite an existing job with the same name.
  bool overwrite = 2  [json_name = "overwrite"];
}

// ScheduleJobResponse is the message response to create/schedule the job.
message ScheduleJobResponse {
  // Empty
}

// GetJobRequest is the message to retrieve a job.
message GetJobRequest {
  // The name of the job.
  string name = 1;
}

// GetJobResponse is the message's response for a job retrieved.
message GetJobResponse {
  // The job details.
  Job job = 1;
}

// DeleteJobRequest is the message to delete the job by name.
message DeleteJobRequest {
  // The name of the job.
  string name = 1;
}

// DeleteJobResponse is the message response to delete the job by name.
message DeleteJobResponse {
  // Empty
}

// DeleteJobsByPrefixRequest is the message to delete jobs by name prefix.
message DeleteJobsByPrefixRequestAlpha1 {
  // name_prefix is the prefix of the job names to delete. If not provided, all
  // jobs associated with this app ID will be deleted.
  optional string name_prefix = 1;
}

message DeleteJobsByPrefixResponseAlpha1 {
  // Empty
}

message ListJobsRequestAlpha1 {
  // Empty
}

// ListJobsResponse is the message response containing the list of jobs.
message ListJobsResponseAlpha1 {
  // The list of jobs.
  repeated Job jobs = 1;
}
